Fix z-indexing of focus styles on skip to content button
Remove alt text on schools banenr

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -38,7 +38,7 @@ body {
     border-radius: 5px;
     color: black;
     opacity: 1;
-    z-index: 10;
+    z-index: 10000;
 }
 .card-header {
     background-color: white;
